--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Tauri + SvelteKit + Typescript App</title>
+		<title>Bookfly</title>
 		<style>
 			* {
 				border: none;
@@ -15,14 +15,6 @@
 				color: inherit;
 				box-sizing: border-box;
 				font-family: "sans-serif";
-
-				--lavender: #b4befe;
-				--text: #cdd6f4;
-				--overlay-2: #9399b2;
-				--surface-2: #585b70;
-				--surface-0: #313244;
-				--base: #1e1e2e;
-				--crust: #11111b;
 			}
 
 			html,
