--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 				padding: 0px;
 				color: inherit;
 				box-sizing: border-box;
-				font-family: "sans-serif";
+				font-family: "Helvetica";
 			}
 
 			html,
