--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,21 @@
 				width: 100vw;
 				height: 100vh;
 				overflow-x: hidden;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
 			}
+
+			 /* Hide scrollbar for Chrome, Safari and Opera */
+			*::-webkit-scrollbar {
+				display: none;
+			}
+
+			/* Hide scrollbar for IE, Edge and Firefox */
+			* {
+				-ms-overflow-style: none;  /* IE and Edge */
+				scrollbar-width: none;  /* Firefox */
+			} 
 
 			button {
 				cursor: pointer;
