--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
 				color: inherit;
 				box-sizing: border-box;
 				font-family: "-apple-system", "BlinkMacSystemFont", "Segoe UI", "sans-serif";
+				--max-width: 30rem;
 			}
 
 			html,
