hey i did stuff

--- a/src/app.html
+++ b/src/app.html
@@ -28,18 +28,19 @@
 				align-items: center;
 			}
 
-			 /* Hide scrollbar for Chrome, Safari and Opera */
+			/* Hide scrollbar for Chrome, Safari and Opera */
 			*::-webkit-scrollbar {
 				display: none;
 			}
 
 			/* Hide scrollbar for IE, Edge and Firefox */
 			* {
-				-ms-overflow-style: none;  /* IE and Edge */
-				scrollbar-width: none;  /* Firefox */
-			} 
+				-ms-overflow-style: none; /* IE and Edge */
+				scrollbar-width: none; /* Firefox */
+			}
 
-			button, label {
+			button,
+			label {
 				cursor: pointer;
 			}
 		</style>
