--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,7 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				background: var(--crust);
 			}
 
 			/* Hide scrollbar for Chrome, Safari and Opera */
